--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@ picture {
 /* Custom classes */
 
 .main_container {
+    background-color: var(--my-lgray-color);
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -71,10 +72,36 @@ picture {
 .qr_box {
     flex-direction: column;
     border-radius: 1.5rem;
-    background-color: var(--my-dark-blue);
+    background-color: white;
     width: 25rem;
-    height: 35rem;
+    height: 40rem;
+    gap: 2rem;
 }
 
+.qr_code_container {
+    background: url("./images/image-qr-code.png") no-repeat center;
+    background-size: cover;
+    border-radius: 1.5rem;
+    margin-inline: auto;
+    margin-top: 1.5rem;
+    width: 22rem;
+    height: 20rem;
+}
 
-
+.improve_txt_container {
+    height: 7rem;
+    width: 18rem;
+    padding-inline: 3rem;
+    color: white;
+    background-color: black;
+    margin-inline: auto;
+    justify-content: center;
+    align-items: center;
+}
+.attribution {
+    font-size: 11px; 
+    text-align: center;
+}
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
