--- a/index.css
+++ b/index.css
@@ -57,8 +57,6 @@ picture {
     display: grid;
 }
 
-
-
 /* Custom classes */
 
 .main_container {
@@ -91,13 +89,36 @@ picture {
 .improve_txt_container {
     height: 7rem;
     width: 18rem;
-    padding-inline: 3rem;
-    color: white;
-    background-color: black;
+    padding-inline: 2rem;
     margin-inline: auto;
+    text-align: center;
     justify-content: center;
     align-items: center;
 }
+
+.imporve_txt_container h2{
+    font-family: 'Outfit' sans-serif;
+    color: var(--my-dark-blue);
+    font-weight: 700;
+}
+
+.visit_msg {
+    text-align: center;
+    margin-bottom: 2rem;
+    width: 15rem;
+    height: 6rem;
+    color: var(--my-grayish-blue);
+    padding-inline: 1rem;
+    margin-inline: auto;
+    align-items: center;
+    justify-items: center;
+}
+
+.visit_msg p{
+    font-family: 'Outfit', sans-serif;
+    font-size: 15px;
+}
+
 .attribution {
     font-size: 11px; 
     text-align: center;
