--- a/index.css
+++ b/index.css
@@ -69,9 +69,9 @@ picture {
 
 .qr_box {
     flex-direction: column;
-    border-radius: 1.5rem;
+    border-radius: .75rem;
     background-color: white;
-    width: 25rem;
+    width: 22rem;
     height: 35rem;
     gap: 2rem;
 }
@@ -79,17 +79,19 @@ picture {
 .qr_code_container {
     background: url("./images/image-qr-code.png") no-repeat center;
     background-size: cover;
-    border-radius: 1.5rem;
+    border-radius: .75rem;
     margin-inline: auto;
-    margin-top: 1.5rem;
-    width: 20rem;
-    height: 20rem;
+    margin-top: .75rem;
+    width: 20.5rem;
+    height: 35rem;
 }
 
 .improve_txt_container {
     height: 7rem;
-    width: 19rem;
-    padding-inline: 2rem;
+    width: 18rem;
+    line-height: 2rem;
+    padding-inline: 1rem;
+    /* background-color: black; */
     margin-inline: auto;
     text-align: center;
     justify-content: center;
@@ -97,9 +99,9 @@ picture {
     color: var(--my-dark-blue);
 }
 
-.improve_txt_container h1 {
+.improve_txt_container h2 {
     font-family: 'Outfit', sans-serif;
-    font-size: 16;
+    font-size: 15;
 }
 
 .visit_msg {
